--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -2,8 +2,39 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "41074cd4-5106-4736-b4fa-309a821b8171",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "265"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sqlalchemy import create_engine\n",
+    "\n",
+    "import pandas as pd\n",
+    "engine = create_engine('postgresql://root:root@localhost:5432/ny_taxi')\n",
+    "\n",
+    "# this url contains taxi zone data\n",
+    "# assume we have downloaded the file as \"taxi+_zone_lookup.csv\"\n",
+    "url = \"<https://raw.githubusercontent.com/alexeygrigorev/datasets/master/nyc-tlc/taxi%2B_zone_lookup.csv>\"\n",
+    "df_zones = pd.read_csv(\"taxi_zone_lookup.csv\")\n",
+    "df_zones.to_sql(name='zones', con=engine, if_exists='replace') \n",
+    "# zones is a new table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ddf574b-330b-4459-9bbd-134c29535707",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -11,11 +42,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "",
-   "name": ""
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "name": ""
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
